--- a/src/Component/Card/Card.css
+++ b/src/Component/Card/Card.css
@@ -2,11 +2,13 @@
      transition: all 600ms;
      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
      box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+     position: relative;
 }
 
 .card:hover {
      cursor: pointer;
      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 
 .card-image, .card-image-holder {
@@ -18,7 +20,26 @@
 }
 
 .card:hover .card-image {
-     /* rotate: 360deg; */
-     /* scaleX: -1.08; */
      transform: scaleX(-1);
+}
+
+.cartBtn {
+     box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+}
+
+.discount {
+     top: 3px;
+     left: -5px;
+     height: 25px;
+     color: white;
+     display: flex;
+     font-size: .8em;
+     padding: 3px 5px;
+     position: absolute;
+     width: max-content;
+     align-items: center;
+     justify-content: center;
+     border-top-right-radius: 5px;
+     border-bottom-left-radius: 5px;
+     box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
