--- a/src/Component/Card/Card.css
+++ b/src/Component/Card/Card.css
@@ -33,7 +33,7 @@
      height: 25px;
      color: white;
      display: flex;
-     font-size: .8em;
+     font-size: .8em !important;
      padding: 3px 5px;
      position: absolute;
      width: max-content;
