--- a/src/Component/Pages/Admin/admin.css
+++ b/src/Component/Pages/Admin/admin.css
@@ -12,6 +12,35 @@
 }
 
 
+.goback {
+     padding: 5px;
+     border: 2px solid transparent;
+     border-radius: 5px;
+     transition: all 400ms;
+     background: transparent !important;
+     animation: 2s slow-mo linear;
+     animation: slow 1s linear infinite alternate-reverse both;
+     animation-play-state: running;
+}
+
+@keyframes slow {
+     from {
+          left: 20px;
+     }
+
+     to {
+          left: 30px;
+     }
+}
+
+.goback:hover {
+     border-radius: 5px;
+     background: transparent;
+     border: 2px solid yellow;
+     box-shadow: 0 0 2px rgb(212, 212, 0);
+     animation-play-state: paused;
+}
+
 .admin-welcome-text {
      font-family: 'Courgette', cursive;
 }
@@ -153,21 +182,25 @@ table * {
 }
 
 th {
-     padding: 15px !important;
+     padding: 25px 20px !important;
      color: white !important;
      font-weight: 600 !important;
      font-size: 16px !important;
 }
 
-tr {
+tbody>tr>td {
+     padding: 25px 20px !important;
+}
+
+tbody>tr {
      cursor: pointer;
      font-weight: 600;
+     border-color: 1px solid gray !important;
 }
 
 tbody>tr:hover {
      background: rgb(240, 240, 240);
 }
-
 
 /* view details */
 .admin-detail-container {
