--- a/src/Component/Pages/styles.css
+++ b/src/Component/Pages/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 h2 {
      font-size: 2rem !important;
 }
@@ -15,3 +17,6 @@ h2 {
      box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px !important;
 }
 
+.contact-form * {
+     font-family: 'Roboto Mono', monospace;
+}
