message delete func are now working reload problem has been fixed over there

--- a/src/Component/Pages/Admin/admin.css
+++ b/src/Component/Pages/Admin/admin.css
@@ -260,3 +260,10 @@ tbody>tr:hover {
 .admin-detail>div>p:last-child {
      width: 70%;
 }
+
+
+/* read message */
+
+.admin-read-message {
+     font-family: 'Roboto Mono', monospace;
+}
